--- a/index.css
+++ b/index.css
@@ -4,20 +4,20 @@
 
 
 
-*{
- margin: 0;
- padding:0;
- box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-body{
+body {
     font-family: "Poppins", sans-serif;
     background-color: black;
     color: white;
     overflow-x: hidden;
 }
 
-.home_section{
+.home_section {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -27,33 +27,243 @@ body{
     padding: 2vh 2vw;
 }
 
-nav{
+nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.nav_contact_link{
-    height: 5.5vh;
+.nav_contact_link {
+    height: 5vh;
     padding: 0.75vh 1.5vw;
     border: 1px solid white;
-    cursor: pointer; 
+    border-radius: 20px;
+    cursor: pointer;
 }
 
-.sub_hero_text{
+.sub_hero_text {
     display: flex;
     justify-content: flex-end;
     font-size: 1vw;
     font-weight: 400;
 }
 
-.sub_hero_text p{
+.sub_hero_text p {
     width: 35vw;
     margin-top: 5vh;
 }
 
-.home_section .hero_text{
+.home_section .hero_text {
     font-family: "Anton", sans-serif;
     font-size: 12.5vw;
     line-height: 1;
+    text-transform: uppercase;
+}
+
+.scroll-btn {
+    position: absolute;
+    bottom: 2.5%;
+    right: 2%;
+    font-size: .8vw;
+    text-transform: uppercase;
+}
+
+.about_section{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100vw;
+    height: 100vh;
+    padding: 2vh 2vw;
+}
+
+.about_section img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    filter: brightness(30%);
+}
+
+.about_span {
+    z-index: 1;
+    margin-left: 2.5%;
+}
+
+.about_content {
+    z-index: 1;
+    margin-bottom: -30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5vh;
+}
+
+.about_content .about_topics {
+    width: 95%;
+    display: flex;
+    gap: 4vw;
+    text-transform: uppercase;
+}
+
+.about_text {
+    font-size: 1.5vw;
+    width: 95%;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.italic:last-child {
+    text-decoration: underline;
+}
+
+.skills {
+    z-index: 1;
+    padding: 0 2.5%;
+    font-family: "Anton", sans-serif;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: flex-start;
+    overflow: hidden;
+    gap: 3vw;
+    font-size: 2.2vw;
+}
+
+.projects_section {
+    font-family: "Anton", sans-serif;
+    width: 100vw;
+    height: 100vh;
+    padding: 5vh 2vw;
+}
+
+.project_title {
+    font-size: 4vw;
+    text-transform: uppercase;
+}
+
+.projects_container {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 35vw 1fr;
+    grid-gap: 1vw;
+}
+
+.sub_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1vw;
+}
+
+.project {
+    position: relative;
+    padding: 2vh 2vw;
+}
+
+.projects_container span {
+    font-family: "Anton", sans-serif;
+    z-index: 2;
+    font-size: 5vw;
+    position: absolute;
+    bottom: 0;
+}
+
+.project img {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    filter: brightness(50%);
+}
+
+.contact_section {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
+
+.contact_section span {
+    position: absolute;
+    cursor: pointer;
+    text-transform: lowercase;
+}
+
+.contact_section span:nth-child(1) {
+    top: 20%;
+    left: 15%;
+}
+
+.contact_section span:nth-child(2) {
+    top: 20%;
+    right: 15%;
+}
+.contact_section span:nth-child(3) {
+    top: 75%;
+    left: 15%;
+}
+.contact_section span:nth-child(4) {
+    top: 75%;
+    right: 15%;
+}
+.contact_section span:nth-child(5) {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1vh 1.5vw;
+    border: 1px solid white;
+    border-radius: 20px;
+    transition: 0.3 ease;
+}
+
+.contact_section span:nth-child(5):hover {
+    background-color: white;
+    color: black;
+}
+
+.footer{
+    width: 100vw;
+    height: 40vh;
+    padding: 0 10vw;
+    background-color: black;
+    display: grid;
+    grid-template-columns: 10vw 10vw 5vw 5vw;
+    align-items: center;
+    gap: 12.5vw;
+    font-size: 1vw;
+}
+
+.footer_title{
+    font-size: 5vw;
+    font-family: "Anton", sans-serif;
+    line-height: 1;
+}
+
+.footer_contact_link{
+    cursor: pointer;
+    margin-top: -10vh;
+}
+
+.footer div{
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
+
+.footer div span{
+    cursor: pointer;
+    transition: 0.3 ease;
+}
+
+.footer div span:hover{
+    text-decoration: underline;
 }
