--- a/index.css
+++ b/index.css
@@ -39,6 +39,12 @@ nav {
     border: 1px solid white;
     border-radius: 20px;
     cursor: pointer;
+    transition: 0.3 ease;
+}
+
+.nav_contact_link:hover {
+    background-color: white;
+    color: black;
 }
 
 .sub_hero_text {
@@ -68,7 +74,7 @@ nav {
     text-transform: uppercase;
 }
 
-.about_section{
+.about_section {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -207,14 +213,17 @@ nav {
     top: 20%;
     right: 15%;
 }
+
 .contact_section span:nth-child(3) {
     top: 75%;
     left: 15%;
 }
+
 .contact_section span:nth-child(4) {
     top: 75%;
     right: 15%;
 }
+
 .contact_section span:nth-child(5) {
     top: 50%;
     left: 50%;
@@ -230,7 +239,7 @@ nav {
     color: black;
 }
 
-.footer{
+.footer {
     width: 100vw;
     height: 40vh;
     padding: 0 10vw;
@@ -242,28 +251,28 @@ nav {
     font-size: 1vw;
 }
 
-.footer_title{
+.footer_title {
     font-size: 5vw;
     font-family: "Anton", sans-serif;
     line-height: 1;
 }
 
-.footer_contact_link{
+.footer_contact_link {
     cursor: pointer;
     margin-top: -10vh;
 }
 
-.footer div{
+.footer div {
     display: flex;
     flex-direction: column;
     gap: 1vh;
 }
 
-.footer div span{
+.footer div span {
     cursor: pointer;
     transition: 0.3 ease;
 }
 
-.footer div span:hover{
+.footer div span:hover {
     text-decoration: underline;
 }
